# internal/controller/create_sub.go
@@ -3,9 +3,15 @@ package controller
 import (
 	"bytes"
 	"encoding/json"
-	"github.com/Ararat25/subscription-aggregation-service/internal/entity"
 	"net/http"
+
+	"github.com/Ararat25/subscription-aggregation-service/internal/entity"
 )
+
+// CreateControllerResponse - структура для ответа от контроллера CreateSubscription
+type CreateControllerResponse struct {
+	Id int64 `example:"15"` // id созданной подписки
+}
 
 // CreateSubscription godoc
 // @Summary Создать новую подписку
@@ -14,9 +20,9 @@ import (
 // @Accept json
 // @Produce json
 // @Param subscription body entity.SubscriptionRequest true "Данные подписки"
-// @Success 200 {object} map[string]int64 "ID созданной подписки"
-// @Failure 400 {object} map[string]string "Некорректные данные"
-// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Success 200 {object} CreateControllerResponse "ID созданной подписки"
+// @Failure 400 {object} ErrorResponse "Некорректные данные"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /subscription [post]
 func (h *Handler) CreateSubscription(w http.ResponseWriter, r *http.Request) {
 	var buf bytes.Buffer
@@ -40,9 +46,7 @@ func (h *Handler) CreateSubscription(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	sendSuccess(w, struct {
-		Id int64 `json:"id"`
-	}{
+	sendSuccess(w, CreateControllerResponse{
 		Id: id,
 	}, http.StatusOK)
 }
