# internal/controller/total_cost_sub.go
@@ -1,12 +1,18 @@
 package controller
 
 import (
-	"github.com/Ararat25/subscription-aggregation-service/internal/model"
-	"github.com/google/uuid"
 	"net/http"
 	"strings"
 	"time"
+
+	"github.com/Ararat25/subscription-aggregation-service/internal/model"
+	"github.com/google/uuid"
 )
+
+// TotalCostControllerResponse - структура для ответа от контроллера TotalCost
+type TotalCostControllerResponse struct {
+	TotalCost int `json:"total_cost" example:"2000"` // суммарная стоимость подписок
+}
 
 // TotalCost godoc
 // @Summary Получить общую стоимость подписок
@@ -17,9 +23,9 @@ import (
 // @Param to query string true "Дата конца периода (формат MM-YYYY)"
 // @Param id query string false "UUID пользователя"
 // @Param service_name query string false "Название сервиса"
-// @Success 200 {object} map[string]int "Общая стоимость"
-// @Failure 400 {object} map[string]string "Неверные параметры запроса"
-// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Success 200 {object} TotalCostControllerResponse "Общая стоимость"
+// @Failure 400 {object} ErrorResponse "Неверные параметры запроса"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /subscriptions/cost [get]
 func (h *Handler) TotalCost(w http.ResponseWriter, r *http.Request) {
 	fromStr := r.URL.Query().Get("from")
@@ -66,9 +72,7 @@ func (h *Handler) TotalCost(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	sendSuccess(w, struct {
-		TotalCost int
-	}{
+	sendSuccess(w, TotalCostControllerResponse{
 		TotalCost: cost,
 	}, http.StatusOK)
 }
